# simple-tnl

ODE/: Makefile  ODE-cuda  ODE-cuda.cu  ODE-cuda.cuo  ODE-cuda.d  config.mk
cmake-expl/: CMakeLists.txt  README.md  example-cuda.cu  example-host.cpp
makefile-expl/: README.md  example-cuda  example-cuda.cuo  example-cuda.d  example-host  example-host.d
